# PersonalIntelligence

./: .gitignore  DEMO_INSTRUCTIONS.md  FEATURES_SUMMARY.md  MERGE_REPORT.md  README.md  TEST_REPORT.md  TEST_REPORT_FINAL.md  docker-compose.yml  pos_core_backend.py  pos_core_frontend.html  requirements.txt  start_dev.sh  test_e2e.sh  test_full_e2e.py  test_unified.py
config/: __init__.py  config.production.yaml  config.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_v3.md  OPTIMIZATION_V2.md  ROADMAP_v3.md
ml-service/: REASONING_README.md  advanced_reasoning.py  client_example.py  config.yaml  data_importers.py  demo_smart_router.py  embedding_service.py  enhanced_ner.py  llm_service.py  logging_config.py  main.py  prediction_models.py  prediction_recommendation_engine.py  privacy.py  reasoning_engine.py  reasoning_service.py  recommendation_v2.py  requirements.txt  resilience.py  test_cors.py  test_enhanced.py  test_main.py  test_service.py  unified_api.py  unified_input_parser.py  vector_store_sqlite.py
pos-cpp/: CMakeLists.txt  CMakeLists_simple.txt  pos_test  test_simple.cpp
pos-cpp/config/: config.yaml
pos-cpp/src/: main.cpp
pos-cpp/src/api/: http_server.cpp  http_server.h
pos-cpp/src/core/: pos_core_engine.cpp  pos_core_engine.h
pos-cpp/src/core/common/: types.cpp  types.h
pos-cpp/src/core/memory/: hierarchical_memory.h  hierarchical_memory_part1.cpp  hierarchical_memory_part2.cpp  hierarchical_memory_part3.cpp  hierarchical_memory_part4.cpp  memory_store.cpp  memory_store.h  memory_store_part2.cpp  memory_store_part3.cpp
pos-cpp/src/core/ontology/: ontology_graph.cpp  ontology_graph.h  ontology_graph_part2.cpp  ontology_graph_part3.cpp
pos-cpp/src/core/reasoning/: reasoning_engine.cpp  reasoning_engine.h
pos-cpp/src/core/temporal/: spatiotemporal_engine.h
pos-cpp/src/ml/: ml_service_client.cpp  ml_service_client.h
pos-cpp/tests/: test_basic.cpp  test_quad_layer_memory.cpp
pos-web/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
pos-web-new/: package.json
pos-web-v2/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
pos-web-v2/src/: App.tsx
pos-web-v2/src/components/: KnowledgeGraphView.tsx  SettingsPanel.tsx  TimelineView.tsx
pos-web-v2/src/hooks/: index.ts
pos-web-v2/src/services/: api.ts
pos-web-v2/src/types/: index.ts
pos-web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
pos-web/src/components/: MapView.tsx  RecommendationCard.tsx  UnifiedInput.tsx  index.ts
pos-web/src/stores/: index.ts
pos-web/src/styles/: index.css
